src/objects/Legal_Alerts__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legal_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Account Adjustment Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by POD or CCC Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Reconciliation Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Authority Payment Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Amendment Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment en route (must include tracking number)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Passed Away</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prevent Legal Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Prevent Legal Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prevent Legal Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_New_Alert_when_Legal_Flag_is_Tru</fullName>
        <active>true</active>
        <errorConditionFormula>Account__r.Open_Litigation_Activities__c &gt; 0</errorConditionFormula>
        <errorMessage>Legal alerts can not be added when open litigation already exists.</errorMessage>
    </validationRules>
</CustomObject>